Finished account service implementation need to bug fix
