# api/internal/infrastructure/inbound/grpc/gen/api/v1/enums.pb.go
@@ -1,0 +1,128 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.10
+// 	protoc        (unknown)
+// source: api/v1/enums.proto
+
+package apiv1
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type LoginProvider int32
+
+const (
+	LoginProvider_LOGIN_PROVIDER_UNSPECIFIED LoginProvider = 0
+	LoginProvider_LOGIN_PROVIDER_GOOGLE      LoginProvider = 1
+)
+
+// Enum value maps for LoginProvider.
+var (
+	LoginProvider_name = map[int32]string{
+		0: "LOGIN_PROVIDER_UNSPECIFIED",
+		1: "LOGIN_PROVIDER_GOOGLE",
+	}
+	LoginProvider_value = map[string]int32{
+		"LOGIN_PROVIDER_UNSPECIFIED": 0,
+		"LOGIN_PROVIDER_GOOGLE":      1,
+	}
+)
+
+func (x LoginProvider) Enum() *LoginProvider {
+	p := new(LoginProvider)
+	*p = x
+	return p
+}
+
+func (x LoginProvider) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (LoginProvider) Descriptor() protoreflect.EnumDescriptor {
+	return file_api_v1_enums_proto_enumTypes[0].Descriptor()
+}
+
+func (LoginProvider) Type() protoreflect.EnumType {
+	return &file_api_v1_enums_proto_enumTypes[0]
+}
+
+func (x LoginProvider) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use LoginProvider.Descriptor instead.
+func (LoginProvider) EnumDescriptor() ([]byte, []int) {
+	return file_api_v1_enums_proto_rawDescGZIP(), []int{0}
+}
+
+var File_api_v1_enums_proto protoreflect.FileDescriptor
+
+const file_api_v1_enums_proto_rawDesc = "" +
+	"\n" +
+	"\x12api/v1/enums.proto\x12\x06api.v1*J\n" +
+	"\rLoginProvider\x12\x1e\n" +
+	"\x1aLOGIN_PROVIDER_UNSPECIFIED\x10\x00\x12\x19\n" +
+	"\x15LOGIN_PROVIDER_GOOGLE\x10\x01B\xba\x01\n" +
+	"\n" +
+	"com.api.v1B\n" +
+	"EnumsProtoP\x01Zggithub.com/AliTSayyed/VULX-AI-Website-Builder/api/internal/infrastructure/inbound/grpc/gen/api/v1;apiv1\xa2\x02\x03AXX\xaa\x02\x06Api.V1\xca\x02\x06Api\\V1\xe2\x02\x12Api\\V1\\GPBMetadata\xea\x02\aApi::V1b\x06proto3"
+
+var (
+	file_api_v1_enums_proto_rawDescOnce sync.Once
+	file_api_v1_enums_proto_rawDescData []byte
+)
+
+func file_api_v1_enums_proto_rawDescGZIP() []byte {
+	file_api_v1_enums_proto_rawDescOnce.Do(func() {
+		file_api_v1_enums_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_api_v1_enums_proto_rawDesc), len(file_api_v1_enums_proto_rawDesc)))
+	})
+	return file_api_v1_enums_proto_rawDescData
+}
+
+var file_api_v1_enums_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
+var file_api_v1_enums_proto_goTypes = []any{
+	(LoginProvider)(0), // 0: api.v1.LoginProvider
+}
+var file_api_v1_enums_proto_depIdxs = []int32{
+	0, // [0:0] is the sub-list for method output_type
+	0, // [0:0] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_api_v1_enums_proto_init() }
+func file_api_v1_enums_proto_init() {
+	if File_api_v1_enums_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_v1_enums_proto_rawDesc), len(file_api_v1_enums_proto_rawDesc)),
+			NumEnums:      1,
+			NumMessages:   0,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_api_v1_enums_proto_goTypes,
+		DependencyIndexes: file_api_v1_enums_proto_depIdxs,
+		EnumInfos:         file_api_v1_enums_proto_enumTypes,
+	}.Build()
+	File_api_v1_enums_proto = out.File
+	file_api_v1_enums_proto_goTypes = nil
+	file_api_v1_enums_proto_depIdxs = nil
+}
