# app/src/gen/api/v1/enums_pb.ts
@@ -1,0 +1,34 @@
+// @generated by protoc-gen-es v2.6.3 with parameter "target=ts"
+// @generated from file api/v1/enums.proto (package api.v1, syntax proto3)
+/* eslint-disable */
+
+import type { GenEnum, GenFile } from "@bufbuild/protobuf/codegenv2";
+import { enumDesc, fileDesc } from "@bufbuild/protobuf/codegenv2";
+
+/**
+ * Describes the file api/v1/enums.proto.
+ */
+export const file_api_v1_enums: GenFile = /*@__PURE__*/
+  fileDesc("ChJhcGkvdjEvZW51bXMucHJvdG8SBmFwaS52MSpKCg1Mb2dpblByb3ZpZGVyEh4KGkxPR0lOX1BST1ZJREVSX1VOU1BFQ0lGSUVEEAASGQoVTE9HSU5fUFJPVklERVJfR09PR0xFEAFCugEKCmNvbS5hcGkudjFCCkVudW1zUHJvdG9QAVpnZ2l0aHViLmNvbS9BbGlUU2F5eWVkL1ZVTFgtQUktV2Vic2l0ZS1CdWlsZGVyL2FwaS9pbnRlcm5hbC9pbmZyYXN0cnVjdHVyZS9pbmJvdW5kL2dycGMvZ2VuL2FwaS92MTthcGl2MaICA0FYWKoCBkFwaS5WMcoCBkFwaVxWMeICEkFwaVxWMVxHUEJNZXRhZGF0YeoCB0FwaTo6VjFiBnByb3RvMw");
+
+/**
+ * @generated from enum api.v1.LoginProvider
+ */
+export enum LoginProvider {
+  /**
+   * @generated from enum value: LOGIN_PROVIDER_UNSPECIFIED = 0;
+   */
+  UNSPECIFIED = 0,
+
+  /**
+   * @generated from enum value: LOGIN_PROVIDER_GOOGLE = 1;
+   */
+  GOOGLE = 1,
+}
+
+/**
+ * Describes the enum api.v1.LoginProvider.
+ */
+export const LoginProviderSchema: GenEnum<LoginProvider> = /*@__PURE__*/
+  enumDesc(file_api_v1_enums, 0);
+
