# app/src/gen/api/v1/user_service_pb.ts
@@ -11,7 +11,7 @@ import type { Message } from "@bufbuild/protobuf";
  * Describes the file api/v1/user_service.proto.
  */
 export const file_api_v1_user_service: GenFile = /*@__PURE__*/
-  fileDesc("ChlhcGkvdjEvdXNlcl9zZXJ2aWNlLnByb3RvEgZhcGkudjEiIAoEVXNlchIKCgJpZBgBIAEoCRIMCgRuYW1lGAIgASgJIhwKDkdldFVzZXJSZXF1ZXN0EgoKAmlkGAEgASgJIi0KD0dldFVzZXJSZXNwb25zZRIaCgR1c2VyGAEgASgLMgwuYXBpLnYxLlVzZXIiIQoRQ3JlYXRlVXNlclJlcXVlc3QSDAoEbmFtZRgBIAEoCSIwChJDcmVhdGVVc2VyUmVzcG9uc2USGgoEdXNlchgBIAEoCzIMLmFwaS52MS5Vc2VyMsQBCgtVc2VyU2VydmljZRJWCgdHZXRVc2VyEhYuYXBpLnYxLkdldFVzZXJSZXF1ZXN0GhcuYXBpLnYxLkdldFVzZXJSZXNwb25zZSIagtPkkwIUEhIvYXBpL3YxL3VzZXJzL3tpZH0SXQoKQ3JlYXRlVXNlchIZLmFwaS52MS5DcmVhdGVVc2VyUmVxdWVzdBoaLmFwaS52MS5DcmVhdGVVc2VyUmVzcG9uc2UiGILT5JMCEjoBKiINL2FwaS92MS91c2Vyc0LAAQoKY29tLmFwaS52MUIQVXNlclNlcnZpY2VQcm90b1ABWmdnaXRodWIuY29tL0FsaVRTYXl5ZWQvVlVMWC1BSS1XZWJzaXRlLUJ1aWxkZXIvYXBpL2ludGVybmFsL2luZnJhc3RydWN0dXJlL2luYm91bmQvZ3JwYy9nZW4vYXBpL3YxO2FwaXYxogIDQVhYqgIGQXBpLlYxygIGQXBpXFYx4gISQXBpXFYxXEdQQk1ldGFkYXRh6gIHQXBpOjpWMWIGcHJvdG8z", [file_google_api_annotations]);
+  fileDesc("ChlhcGkvdjEvdXNlcl9zZXJ2aWNlLnByb3RvEgZhcGkudjEibAoEVXNlchIKCgJpZBgBIAEoCRISCgpmaXJzdF9uYW1lGAIgASgJEhEKCWxhc3RfbmFtZRgDIAEoCRINCgVlbWFpbBgEIAEoCRIPCgdjcmVkaXRzGAUgASgDEhEKCWlzX2FjdGl2ZRgGIAEoCCIkCgVVc2VycxIbCgV1c2VycxgBIAMoCzIMLmFwaS52MS5Vc2VyIhwKDkdldFVzZXJSZXF1ZXN0EgoKAmlkGAEgASgJIi0KD0dldFVzZXJSZXNwb25zZRIaCgR1c2VyGAEgASgLMgwuYXBpLnYxLlVzZXIiEgoQTGlzdFVzZXJzUmVxdWVzdCIxChFMaXN0VXNlcnNSZXNwb25zZRIcCgV1c2VycxgBIAEoCzINLmFwaS52MS5Vc2VycyJJChFDcmVhdGVVc2VyUmVxdWVzdBISCgpmaXJzdF9uYW1lGAEgASgJEhEKCWxhc3RfbmFtZRgCIAEoCRINCgVlbWFpbBgDIAEoCSIwChJDcmVhdGVVc2VyUmVzcG9uc2USGgoEdXNlchgBIAEoCzIMLmFwaS52MS5Vc2VyMp0CCgtVc2VyU2VydmljZRJWCgdHZXRVc2VyEhYuYXBpLnYxLkdldFVzZXJSZXF1ZXN0GhcuYXBpLnYxLkdldFVzZXJSZXNwb25zZSIagtPkkwIUEhIvYXBpL3YxL3VzZXJzL3tpZH0SVwoJTGlzdFVzZXJzEhguYXBpLnYxLkxpc3RVc2Vyc1JlcXVlc3QaGS5hcGkudjEuTGlzdFVzZXJzUmVzcG9uc2UiFYLT5JMCDxINL2FwaS92MS91c2VycxJdCgpDcmVhdGVVc2VyEhkuYXBpLnYxLkNyZWF0ZVVzZXJSZXF1ZXN0GhouYXBpLnYxLkNyZWF0ZVVzZXJSZXNwb25zZSIYgtPkkwISOgEqIg0vYXBpL3YxL3VzZXJzQsABCgpjb20uYXBpLnYxQhBVc2VyU2VydmljZVByb3RvUAFaZ2dpdGh1Yi5jb20vQWxpVFNheXllZC9WVUxYLUFJLVdlYnNpdGUtQnVpbGRlci9hcGkvaW50ZXJuYWwvaW5mcmFzdHJ1Y3R1cmUvaW5ib3VuZC9ncnBjL2dlbi9hcGkvdjE7YXBpdjGiAgNBWFiqAgZBcGkuVjHKAgZBcGlcVjHiAhJBcGlcVjFcR1BCTWV0YWRhdGHqAgdBcGk6OlYxYgZwcm90bzM", [file_google_api_annotations]);
 
 /**
  * @generated from message api.v1.User
@@ -23,9 +23,29 @@ export type User = Message<"api.v1.User"> & {
   id: string;
 
   /**
-   * @generated from field: string name = 2;
+   * @generated from field: string first_name = 2;
    */
-  name: string;
+  firstName: string;
+
+  /**
+   * @generated from field: string last_name = 3;
+   */
+  lastName: string;
+
+  /**
+   * @generated from field: string email = 4;
+   */
+  email: string;
+
+  /**
+   * @generated from field: int64 credits = 5;
+   */
+  credits: bigint;
+
+  /**
+   * @generated from field: bool is_active = 6;
+   */
+  isActive: boolean;
 };
 
 /**
@@ -34,6 +54,23 @@ export type User = Message<"api.v1.User"> & {
  */
 export const UserSchema: GenMessage<User> = /*@__PURE__*/
   messageDesc(file_api_v1_user_service, 0);
+
+/**
+ * @generated from message api.v1.Users
+ */
+export type Users = Message<"api.v1.Users"> & {
+  /**
+   * @generated from field: repeated api.v1.User users = 1;
+   */
+  users: User[];
+};
+
+/**
+ * Describes the message api.v1.Users.
+ * Use `create(UsersSchema)` to create a new message.
+ */
+export const UsersSchema: GenMessage<Users> = /*@__PURE__*/
+  messageDesc(file_api_v1_user_service, 1);
 
 /**
  * @generated from message api.v1.GetUserRequest
@@ -50,7 +87,7 @@ export type GetUserRequest = Message<"api.v1.GetUserRequest"> & {
  * Use `create(GetUserRequestSchema)` to create a new message.
  */
 export const GetUserRequestSchema: GenMessage<GetUserRequest> = /*@__PURE__*/
-  messageDesc(file_api_v1_user_service, 1);
+  messageDesc(file_api_v1_user_service, 2);
 
 /**
  * @generated from message api.v1.GetUserResponse
@@ -67,16 +104,56 @@ export type GetUserResponse = Message<"api.v1.GetUserResponse"> & {
  * Use `create(GetUserResponseSchema)` to create a new message.
  */
 export const GetUserResponseSchema: GenMessage<GetUserResponse> = /*@__PURE__*/
-  messageDesc(file_api_v1_user_service, 2);
+  messageDesc(file_api_v1_user_service, 3);
+
+/**
+ * @generated from message api.v1.ListUsersRequest
+ */
+export type ListUsersRequest = Message<"api.v1.ListUsersRequest"> & {
+};
+
+/**
+ * Describes the message api.v1.ListUsersRequest.
+ * Use `create(ListUsersRequestSchema)` to create a new message.
+ */
+export const ListUsersRequestSchema: GenMessage<ListUsersRequest> = /*@__PURE__*/
+  messageDesc(file_api_v1_user_service, 4);
+
+/**
+ * @generated from message api.v1.ListUsersResponse
+ */
+export type ListUsersResponse = Message<"api.v1.ListUsersResponse"> & {
+  /**
+   * @generated from field: api.v1.Users users = 1;
+   */
+  users?: Users;
+};
+
+/**
+ * Describes the message api.v1.ListUsersResponse.
+ * Use `create(ListUsersResponseSchema)` to create a new message.
+ */
+export const ListUsersResponseSchema: GenMessage<ListUsersResponse> = /*@__PURE__*/
+  messageDesc(file_api_v1_user_service, 5);
 
 /**
  * @generated from message api.v1.CreateUserRequest
  */
 export type CreateUserRequest = Message<"api.v1.CreateUserRequest"> & {
   /**
-   * @generated from field: string name = 1;
+   * @generated from field: string first_name = 1;
    */
-  name: string;
+  firstName: string;
+
+  /**
+   * @generated from field: string last_name = 2;
+   */
+  lastName: string;
+
+  /**
+   * @generated from field: string email = 3;
+   */
+  email: string;
 };
 
 /**
@@ -84,7 +161,7 @@ export type CreateUserRequest = Message<"api.v1.CreateUserRequest"> & {
  * Use `create(CreateUserRequestSchema)` to create a new message.
  */
 export const CreateUserRequestSchema: GenMessage<CreateUserRequest> = /*@__PURE__*/
-  messageDesc(file_api_v1_user_service, 3);
+  messageDesc(file_api_v1_user_service, 6);
 
 /**
  * @generated from message api.v1.CreateUserResponse
@@ -101,7 +178,7 @@ export type CreateUserResponse = Message<"api.v1.CreateUserResponse"> & {
  * Use `create(CreateUserResponseSchema)` to create a new message.
  */
 export const CreateUserResponseSchema: GenMessage<CreateUserResponse> = /*@__PURE__*/
-  messageDesc(file_api_v1_user_service, 4);
+  messageDesc(file_api_v1_user_service, 7);
 
 /**
  * @generated from service api.v1.UserService
@@ -114,6 +191,14 @@ export const UserService: GenService<{
     methodKind: "unary";
     input: typeof GetUserRequestSchema;
     output: typeof GetUserResponseSchema;
+  },
+  /**
+   * @generated from rpc api.v1.UserService.ListUsers
+   */
+  listUsers: {
+    methodKind: "unary";
+    input: typeof ListUsersRequestSchema;
+    output: typeof ListUsersResponseSchema;
   },
   /**
    * @generated from rpc api.v1.UserService.CreateUser
